--- a/css-j2bt6x/resources.css
+++ b/css-j2bt6x/resources.css
@@ -1,372 +1,2 @@
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: white;
-    opacity: 0.5; /* Firefox */
-  }
-  
-  :-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: rgba(255, 255, 255, 0.5)
-  }
-  
-  ::-ms-input-placeholder { /* Microsoft Edge */
-    color: rgba(255, 255, 255, 0.5)
-  }
-
-#resources {
-    width: 800px;
-    min-width: 320px;
-    margin:auto;
-    margin-top: 7.4em;
-    margin-bottom: 10vh;
-    height: auto;
-    padding-left: 1em;
-    padding-right: 1em;
-    display: inline-flex;
-    flex-direction: column;
-}
-
-#resources img {
-    cursor: pointer;
-}
-
-.dropHeader {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 3em;
-}
-
-#dropCourse {
-    width: 49%;
-    height: 50px;
-    outline: none;
-    background: rgba(0, 0, 0, 0.05);
-    border: 1px white solid;
-    border-radius: 6px;
-
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 28px;
-    letter-spacing: 0.1em;
-    color: white;
-    text-align: center;
-}
-
-#dropBatch {
-    width: 49%;
-    height: 50px;
-    outline: none;
-    background: rgba(0, 0, 0, 0.05);
-    border: 1px white solid;
-    border-radius: 6px;
-
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 28px;
-    letter-spacing: 0.1em;
-    color: white;
-    text-align: center;
-}
-
-
-.dropOption {
-    color: #303030;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 28px;
-    letter-spacing: 0.1em;
-    text-align: center;
-    padding-top: 1em;
-    padding-bottom: 1em;
-
-}
-
-.frm {
-    width: 100%;
-    height: auto;
-    display: inline-flex;
-    flex-direction: column;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 3em;
-}
-
-.frm img {
-    object-fit: none;
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.frm h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 22px;
-    line-height: 28px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-}
-
-
-.entry {
-    width: auto;
-    min-height: 140px;
-    height: auto;
-    border: 1px solid white;
-    border-radius: 6px;
-    margin-top: 0.5em;
-    background: rgba(0, 0, 0, 0.05);
-    padding-bottom: .5em;
-}
-
-.entryHeader {
-    display: flex;
-    width: 98%;
-    height: auto;
-    margin: auto;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    justify-content: space-between;
-}
-
-
-.bannerLine {
-    width: 98%;
-    height: 1px;
-    background-color: white;
-    margin-left: auto;
-    margin-right: auto;
-    opacity: .3;
-}
-
-.textbox {
-    margin: auto;
-    width: 94%;
-    height: 40px;
-    border: 1px solid #FFFFFF;
-    border-radius: 4px;
-    background-color: transparent;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    padding-left: .4em;
-    padding-right: .4em;
-    padding-top: auto;
-    padding-bottom: auto;
-    color: white;
-    outline: none;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-
-.resourcesEntry {
-    display: flex;
-    width: 98%;
-    height: 40px;
-    margin-top: .5em;
-    margin-bottom: .5em;
-    margin-left: auto;
-    margin-right: auto;
-    justify-content: space-between;
-}
-
-.resourcesEntry h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-    margin-top: auto;
-    margin-bottom: auto;
-    text-align: left;
-}
-
-
-.resourcesDesc {
-    width: 50%;
-    height: 40px;
-    display: flex;
-    overflow: hidden;
-    word-break:keep-all;
-}
-
-
-.trainingVideoEntry {
-    display: flex;
-    width: 98%;
-    height: 40px;
-    margin-top: .5em;
-    margin-bottom: .5em;
-    margin-left: auto;
-    margin-right: auto;
-    justify-content: space-between;
-}
-
-.trainingVideoEntry h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-    margin-top: auto;
-    margin-bottom: auto;
-    text-align: left;
-    cursor: pointer;
-}
-
-.trainingVideoTitle {
-    width: 50%;
-    height: 40px;
-    display: flex;
-    overflow: hidden;
-    word-break:keep-all;
-}
-
-.trainingVideoViews {
-    width: 45%;
-    height: 40px;
-    display: flex;
-    overflow: hidden;
-    word-break:keep-all;
-}
-
-.otherVideosEntry {
-    display: flex;
-    width: 98%;
-    height: 40px;
-    margin-top: .5em;
-    margin-bottom: .5em;
-    margin-left: auto;
-    margin-right: auto;
-    justify-content: space-between;
-}
-
-.otherVideosEntry h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-    margin-top: auto;
-    margin-bottom: auto;
-    text-align: left;
-    cursor: pointer;
-}
-
-
-.otherVideosTitle {
-    width: 50%;
-    height: 40px;
-    display: flex;
-    overflow: hidden;
-}
-
-
-.otherVideosViews {
-    width: 45%;
-    height: 40px;
-    display: flex;
-    overflow: hidden;
-}
-
-.basicFilesEntry {
-    display: flex;
-    width: 98%;
-    height: 40px;
-    margin-top: .5em;
-    margin-bottom: .5em;
-    margin-left: auto;
-    margin-right: auto;
-    justify-content: space-between;
-}
-
-.basicFilesEntry h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-    margin-top: auto;
-    margin-bottom: auto;
-    text-align: left;
-    cursor: pointer;
-}
-
-.basicFilesTitle {
-    width: 50%;
-    height: 40px;
-    display: flex;
-    overflow: hidden;
-    word-break:keep-all;
-}
-
-.basicFilesDownloads {
-    width: 45%;
-    height: 40px;
-    display: flex;
-    overflow: hidden;
-    word-break:keep-all;
-}
-
-
-.imgResources {
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.btnPlayTrainingVideo {
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-    
-}
-
-.btnDelTrainingVideo {
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.btnPlayOtherVideos {
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.btnDelOtherVideos {
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.btnDownloadBasicFiles {
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.btnDelBasicFiles {
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-
+/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2023/08/04 17:48:42 */
+[class~=dropHeader]{display:flex;}[class~=frm] img{object-fit:none;}[class~=dropHeader]{justify-content:space-between;}#resources img{cursor:pointer;}[class~=dropHeader],[class~=frm]{margin-bottom:3em;}.dropOption{color:#303030;}[class~=frm] h1,.dropOption{font-family:"Roboto";}.dropOption{font-style:normal;}[class~=frm] img{margin-left:.2em;}#resources{width:8.333333333in;}[class~=frm] img{margin-bottom:auto;}.dropOption{font-weight:700;}#resources{min-width:240pt;}#resources{margin-left:auto;}.dropOption{font-size:.875pc;}#resources{margin-bottom:10vh;}.dropOption{line-height:28px;}.dropOption{letter-spacing:.1em;}.dropOption{text-align:center;}.dropOption{padding-top:1em;}#resources{margin-right:auto;}.dropOption{padding-bottom:1em;}[class~=frm]{width:100%;}#resources{margin-top:7.4em;}[class~=frm],.entry,#resources,.entryHeader{height:auto;}#resources{padding-left:1em;}#resources,[class~=frm]{display:inline-flex;}[class~=frm],#resources{flex-direction:column;}#resources{padding-right:1em;}[class~=frm]{margin-left:auto;}#dropCourse{width:49%;}#dropCourse{height:37.5pt;}[class~=frm]{margin-right:auto;}::placeholder{color:white;}.entry{width:auto;}.entry{min-height:105pt;}.entry,#dropCourse{border-left-width:.75pt;}#dropCourse,.entry{border-bottom-width:.75pt;}[class~=frm] img{margin-right:.2em;}#dropCourse,.entry{border-right-width:.75pt;}#dropCourse,.entry{border-top-width:.75pt;}#dropCourse{outline:none;}[class~=frm] img{margin-top:auto;}#dropCourse,.entry{border-left-style:solid;}#dropCourse,.entry{border-bottom-style:solid;}#dropCourse,.entry{background:rgba(0,0,0,.05);}.entry,#dropCourse{border-right-style:solid;}.entry,#dropCourse{border-top-style:solid;}.entry,#dropCourse{border-left-color:white;}.entry,#dropCourse{border-bottom-color:white;}#dropCourse,.entry{border-right-color:white;}#dropCourse,.entry{border-top-color:white;}.entry{border-image:none;}.entry{border-radius:4.5pt;}.entry{margin-top:.5em;}[class~=resourcesEntry] h1,[class~=frm] h1{font-style:normal;}.entry{padding-bottom:.5em;}.entryHeader{display:flex;}[class~=bannerLine],.entryHeader{width:98%;}[class~=frm] h1{font-weight:900;}.entryHeader{margin-left:auto;}.entryHeader{margin-bottom:1em;}.entryHeader{margin-right:auto;}.entryHeader{margin-top:1em;}[class~=frm] h1{font-size:1.375pc;}[class~=frm] h1,#dropCourse{line-height:21pt;}.entryHeader{justify-content:space-between;}.textbox,[class~=frm] h1,#dropCourse,[class~=resourcesEntry] h1{letter-spacing:.1em;}[class~=bannerLine]{height:.75pt;}[class~=resourcesEntry] h1,[class~=frm] h1{color:#fff;}[class~=bannerLine]{background-color:white;}[class~=resourcesEntry] h1,#dropCourse{font-family:"Roboto";}[class~=bannerLine]{margin-left:auto;}#dropCourse,[class~=resourcesEntry] h1{font-weight:700;}[class~=bannerLine]{margin-right:auto;}[class~=bannerLine]{opacity:.3;}#dropCourse,[class~=trainingVideoEntry] h1,.textbox,[class~=resourcesEntry] h1{font-size:.145833333in;}.textbox{margin-left:.2em;}.textbox{margin-bottom:auto;}.textbox,[class~=resourcesEntry] h1{line-height:1.4375pc;}.textbox{margin-right:.2em;}.textbox{margin-top:auto;}::placeholder{opacity:.5;}.textbox{width:94%;}.textbox{height:30pt;}.textbox{border-left-width:.010416667in;}.textbox{border-bottom-width:.010416667in;}#dropCourse{border-image:none;}.textbox,#dropBatch{border-right-width:.010416667in;}#dropCourse{border-radius:.0625in;}#dropBatch,.textbox{border-top-width:.010416667in;}.textbox,#dropBatch{border-left-style:solid;}.textbox{border-bottom-style:solid;}.textbox,[class~=trainingVideoEntry] h1,#dropCourse{font-style:normal;}[class~=resourcesEntry] h1{margin-top:auto;}.textbox{border-right-style:solid;}.textbox{border-top-style:solid;}.textbox{border-left-color:#fff;}.textbox{border-bottom-color:#fff;}.textbox{border-right-color:#fff;}.textbox{border-top-color:#fff;}.textbox,#dropCourse{color:white;}.textbox{border-image:none;}#dropCourse{text-align:center;}#dropBatch{width:49%;}[class~=resourcesEntry] h1{margin-bottom:auto;}#dropBatch{height:37.5pt;}.textbox,#dropBatch{outline:none;}.textbox{border-radius:4px;}[class~=resourcesEntry] h1{text-align:left;}.textbox{background-color:transparent;}[class~=trainingVideoEntry] h1,.textbox{font-family:"Roboto";}.textbox{font-weight:400;}[class~=trainingVideoEntry] h1{font-weight:700;}#dropBatch{background:rgba(0,0,0,.05);}#dropBatch{border-left-width:.75pt;}.textbox{padding-left:.4em;}.textbox{padding-right:.4em;}.textbox{padding-top:auto;}.textbox{padding-bottom:auto;}#dropBatch{border-bottom-width:.75pt;}[class~=resourcesEntry],[class~=trainingVideoViews],[class~=otherVideosViews],[class~=trainingVideoEntry],.resourcesDesc,[class~=otherVideosTitle],.otherVideosEntry,[class~=trainingVideoTitle]{display:flex;}[class~=resourcesEntry]{width:98%;}[class~=trainingVideoEntry],[class~=trainingVideoViews],[class~=trainingVideoTitle],[class~=otherVideosTitle],[class~=otherVideosViews],.otherVideosEntry,.resourcesDesc,[class~=resourcesEntry]{height:.416666667in;}[class~=trainingVideoEntry],[class~=resourcesEntry],.otherVideosEntry,[class~=basicFilesEntry]{margin-top:.5em;}[class~=trainingVideoEntry],[class~=basicFilesEntry],[class~=resourcesEntry],.otherVideosEntry{margin-bottom:.5em;}[class~=resourcesEntry],.otherVideosEntry,[class~=basicFilesEntry],[class~=trainingVideoEntry]{margin-left:auto;}[class~=basicFilesEntry],[class~=resourcesEntry],.otherVideosEntry,[class~=trainingVideoEntry]{margin-right:auto;}[class~=trainingVideoEntry] h1{line-height:1.4375pc;}[class~=resourcesEntry],.otherVideosEntry,[class~=basicFilesEntry],[class~=trainingVideoEntry]{justify-content:space-between;}.resourcesDesc{width:50%;}[class~=trainingVideoTitle],[class~=otherVideosTitle],.resourcesDesc,[class~=trainingVideoViews]{overflow:hidden;}[class~=basicFilesTitle],[class~=trainingVideoViews],.resourcesDesc,[class~=trainingVideoTitle]{word-break:keep-all;}[class~=trainingVideoEntry] h1{letter-spacing:.1em;}[class~=trainingVideoEntry]{width:98%;}[class~=trainingVideoEntry] h1{color:#fff;}[class~=trainingVideoEntry] h1{margin-top:auto;}#dropBatch{border-bottom-style:solid;}#dropBatch{border-right-style:solid;}#dropBatch{border-top-style:solid;}[class~=trainingVideoEntry] h1{margin-bottom:auto;}[class~=trainingVideoEntry] h1{text-align:left;}[class~=trainingVideoTitle]{width:50%;}#dropBatch{border-left-color:white;}[class~=trainingVideoViews]{width:45%;}[class~=trainingVideoEntry] h1{cursor:pointer;}[class~=otherVideosEntry] h1,#dropBatch{font-family:"Roboto";}.otherVideosEntry{width:98%;}[class~=otherVideosEntry] h1,#dropBatch{font-style:normal;}#dropBatch{border-bottom-color:white;}#dropBatch{border-right-color:white;}#dropBatch,[class~=otherVideosEntry] h1{font-weight:700;}#dropBatch{border-top-color:white;}[class~=otherVideosTitle]{width:50%;}[class~=otherVideosEntry] h1,#dropBatch{font-size:10.5pt;}[class~=otherVideosEntry] h1{line-height:23px;}[class~=otherVideosViews]{width:45%;}#dropBatch{border-image:none;}#dropBatch{border-radius:6px;}[class~=basicFilesTitle],[class~=basicFilesDownloads],[class~=otherVideosViews]{overflow:hidden;}[class~=basicFilesTitle],[class~=basicFilesEntry],[class~=basicFilesDownloads]{display:flex;}[class~=basicFilesEntry]{width:98%;}#dropBatch,[class~=otherVideosEntry] h1,.basicFilesEntry h1{letter-spacing:.1em;}.basicFilesEntry h1,[class~=otherVideosEntry] h1{color:#fff;}[class~=basicFilesEntry],[class~=basicFilesTitle],[class~=basicFilesDownloads]{height:40px;}[class~=otherVideosEntry] h1,.basicFilesEntry h1{margin-top:auto;}[class~=otherVideosEntry] h1,.basicFilesEntry h1{margin-bottom:auto;}[class~=basicFilesTitle]{width:50%;}[class~=basicFilesDownloads]{width:45%;}.basicFilesEntry h1,[class~=otherVideosEntry] h1{text-align:left;}#dropBatch{line-height:1.75pc;}.basicFilesEntry h1,[class~=otherVideosEntry] h1{cursor:pointer;}[class~=basicFilesDownloads]{word-break:keep-all;}#dropBatch{color:white;}#dropBatch{text-align:center;}.btnDelBasicFiles,.btnDelOtherVideos,[class~=btnDownloadBasicFiles],[class~=imgResources],.btnPlayOtherVideos,.btnPlayTrainingVideo,.btnDelTrainingVideo{margin-left:.2em;}[class~=imgResources],.btnDelBasicFiles,.btnPlayTrainingVideo,.btnDelOtherVideos,[class~=btnDownloadBasicFiles],.btnDelTrainingVideo,.btnPlayOtherVideos{margin-bottom:auto;}.basicFilesEntry h1{font-family:"Roboto";}.basicFilesEntry h1{font-style:normal;}.basicFilesEntry h1{font-weight:700;}.btnPlayOtherVideos,[class~=btnDownloadBasicFiles],.btnPlayTrainingVideo,.btnDelBasicFiles,.btnDelTrainingVideo,[class~=imgResources],.btnDelOtherVideos{margin-right:.2em;}[class~=imgResources],.btnDelTrainingVideo,.btnDelOtherVideos,[class~=btnDownloadBasicFiles],.btnPlayTrainingVideo,.btnDelBasicFiles,.btnPlayOtherVideos{margin-top:auto;}.basicFilesEntry h1{font-size:10.5pt;}.basicFilesEntry h1{line-height:1.4375pc;}:-ms-input-placeholder{color:rgba(255,255,255,.5);}::-ms-input-placeholder{color:rgba(255,255,255,.5);}
