--- a/css-j2bt6x/style.css
+++ b/css-j2bt6x/style.css
@@ -1,163 +1,2 @@
-*{
-    margin:0;
-    padding:0;
-
-}
-
-a:link {
-    color: white;
-  }
-  
-  /* visited link */
-  a:visited {
-    color: white;
-  }
-  
-  /* mouse over link */
-  a:hover {
-    color: white;
-  }
-  
-  /* selected link */
-  a:active {
-    color: white;
-  }
-
-body {
-	overflow-x: hidden;
-  overflow-y: auto;
-  background-image: linear-gradient(180deg, rgba(61, 39, 148 ,1), rgba(109,196,245, 1)); 
-}
-
-
-/* width */
-body::-webkit-scrollbar {
-	width: 1px;
-  }
-  
-  /* Track */
-body::-webkit-scrollbar-track {
-	background: #303030;
-  }
-  
-  /* Handle */
-body::-webkit-scrollbar-thumb {
-	background: #313131;
-	border-radius: 100px;
-  }
-  
-body::-webkit-scrollbar-thumb:hover {
-	background: #505050;
-	border-radius: 100px;
-  }
-
-#header {
-    z-index: 10;
-    width: 100%;
-    height: 80px;
-    display: flex;
-    position: fixed;
-}
-
-#div1 {
-    height: 80px;
-    width: 80px;
-    min-width: 80px;
-    max-width: 80px;
-    display: flex;
-    background-color: #303030;
-}
-
-#div1 img {
-    max-width: 64px;
-    max-height: 61px;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: pointer;
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-#div2 {
-    min-width: 23px;
-    max-width: 23px;
-}
-
-#div3 {
-    width: 100%;
-    height: 40px;
-    display: flex;
-    position: fixed;
-    z-index: 10;
-    background-color: #303030;
-}
-
-#div3 img {
-    margin-left: auto;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-right: 8px;
-    cursor: pointer;
-}
-
-#divBanner {
-    z-index: 7;
-    margin-top: 40px;
-    height: 30px;
-    width: 100%;
-    display: flex;
-    overflow: hidden;
-    background-color: #3A2D8C;
-    visibility: hidden;
-    position: fixed;
-}
-
-#bannerContainer {
-    width: auto;
-    height: auto;
-    display: flex;
-}
-
-#pBanner {
-    font-family: 'Roboto';
-    font-size: 14px;
-    font-weight: 400; 
-    margin-top: auto;
-    margin-bottom: auto;
-    color: white;
-    
-}
-
-#bodyBlue {
-    z-index: 0;
-    width: 100%;
-    min-height: 97vh;
-    display: flex;
-    visibility: hidden;
-    flex-wrap: wrap;
-    background-image: linear-gradient(180deg, rgba(61, 39, 148 ,1), rgba(109,196,245, 1)); 
-}
-
-
-#footer {
-    z-index: 9;
-    height: 3vh;
-    width: 100%;
-    display: flex;
-    top: 97vh;
-    position: fixed;
-    background-color: #303030;
-}
-
-#footer p {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: auto;
-    margin-bottom: auto;
-    font-family: 'Poppins';
-    font-size: 10px;
-    font-weight: 500;
-    color: #888888;
-    letter-spacing: 2px;
-}
-
+/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2023/08/04 17:49:02 */
+#div3,#header{z-index:10;}#header{width:100%;}#div1 img{max-width:64px;}#header,#div1{height:5pc;}#div1 img{max-height:45.75pt;}#div3,#bannerContainer,#bodyBlue,#header,#footer,#div1,#divBanner{display:flex;}a:visited,a:active,a:hover,a:link{color:white;}*{margin-left:0;}#footer p,#div1 img,#div3 img{margin-left:auto;}#div1 img{margin-right:auto;}#footer,#div3,#divBanner,#header{position:fixed;}#div3 img,#div1 img{cursor:pointer;}#div1{width:60pt;}#div1{min-width:60pt;}#div3 img,#div1 img{margin-top:auto;}*{margin-bottom:0;}#div1{max-width:60pt;}#div1 img,#div3 img,#footer p,#pBanner{margin-bottom:auto;}#div1,#div3{background-color:#303030;}#div2{min-width:.239583333in;}#div3 img{margin-right:.5pc;}#div2{max-width:17.25pt;}#div3,#divBanner{width:100%;}#div3{height:40px;}*{margin-right:0;}#divBanner{z-index:7;}#divBanner{margin-top:.416666667in;}#divBanner{height:1.875pc;}#divBanner{overflow:hidden;}#footer p{margin-right:auto;}#divBanner{background-color:#3a2d8c;}*{margin-top:0;}#divBanner,#bodyBlue{visibility:hidden;}#bannerContainer{width:auto;}#bannerContainer{height:auto;}#footer p,#pBanner{margin-top:auto;}body{overflow-x:hidden;}*{padding-left:0;}#pBanner{font-family:"Roboto";}*{padding-bottom:0;}#footer p{font-family:"Poppins";}*{padding-right:0;}#pBanner{font-size:.875pc;}#pBanner{font-weight:400;}#footer p{font-size:.104166667in;}*{padding-top:0;}#footer p{font-weight:500;}#footer p{color:#888;}#pBanner{color:white;}#bodyBlue{z-index:0;}#footer p{letter-spacing:.020833333in;}body::-webkit-scrollbar-thumb:hover{background:#505050;}#bodyBlue,#footer{width:100%;}#bodyBlue{min-height:97vh;}#bodyBlue{flex-wrap:wrap;}#bodyBlue,body{background-image:linear-gradient(180deg,rgba(61,39,148,1),rgba(109,196,245,1));}#footer{z-index:9;}body{overflow-y:auto;}#footer{height:3vh;}#footer{top:97vh;}#footer{background-color:#303030;}body::-webkit-scrollbar{width:1px;}body::-webkit-scrollbar-track{background:#303030;}body::-webkit-scrollbar-thumb{background:#313131;}body::-webkit-scrollbar-thumb{border-radius:1.041666667in;}body::-webkit-scrollbar-thumb:hover{border-radius:6.25pc;}
